# qlib-alpha101-csi300

./: .bash  .env.example  .gitignore  README.md  config.yaml  config_qrun.yaml  data_preparation.py  dump_bin.py  pyproject.toml  requirements.txt  workflow.py
.qlib/qlib-main/docs/: qlib-data-cache.md
data/input/: csi300_stocks.csv
data/input/my_data/: SH600009.csv  SH600010.csv  SH600015.csv  SH600016.csv  SH600018.csv  SH600019.csv  SH600023.csv  SH600025.csv  SH600027.csv  SH600036.csv  SH600048.csv  SH600061.csv  SH600066.csv  SH600111.csv  SH600150.csv  SH600219.csv  SH600276.csv  SH600362.csv  SH600372.csv  SH600406.csv  SH600415.csv  SH600438.csv  SH600482.csv  SH600515.csv  SH600519.csv  SH600547.csv  SH600585.csv  SH600600.csv  SH600674.csv  SH600690.csv  SH600741.csv  SH600745.csv  SH600760.csv  SH600795.csv  SH600803.csv  SH600845.csv  SH600887.csv  SH600918.csv  SH600919.csv  SH600941.csv  (+109 more)
data/input/my_data0/: SH600000.csv  SH600011.csv  SH600026.csv  SH600028.csv  SH600029.csv  SH600030.csv  SH600031.csv  SH600039.csv  SH600050.csv  SH600085.csv  (+150 more)
data/results_qrun/: backtest_positions.csv  backtest_report.csv
data/results_raw/: backtest_positions.csv  backtest_report.csv
qrun/: config_qrun.yaml  report.py  run_qrun.py  workflow_qrun.py
scripts/: run_backtest.py  run_data.py
src/backtest/: executor.py
src/data/: preparator.py  risk.py  utils.py
src/dataset/: builder.py  loader.py
src/model/: lgb_model.py
src/pipelines/: backtest_pipeline.py  data_pipeline.py
src/strategy/: score_strategy.py
src/utils/: config.py  env.py  logger.py
(+32 files in other folders)
